# mastermind-rust

./: .gitignore  Cargo.toml  README.adoc
src/: code.rs  main.rs  options.rs  response.rs  tree.rs
src/tree/: morphology.rs  rank.rs
