[package]
name = "mastermind"
version = "0.1.0"
authors = ["Tom Simmons (Tomboyo) <tomasimmons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
clap = "2.33.0"

[dev-dependencies]
maplit = "1.0.2"
